compiler2013/src/parser/tigerParser.java
// Generated from tiger.g4 by ANTLR 4.0

package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class tigerParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__43 = 1, T__42 = 2, T__41 = 3, T__40 = 4,
			T__39 = 5, T__38 = 6, T__37 = 7, T__36 = 8, T__35 = 9, T__34 = 10,
			T__33 = 11, T__32 = 12, T__31 = 13, T__30 = 14, T__29 = 15,
			T__28 = 16, T__27 = 17, T__26 = 18, T__25 = 19, T__24 = 20,
			T__23 = 21, T__22 = 22, T__21 = 23, T__20 = 24, T__19 = 25,
			T__18 = 26, T__17 = 27, T__16 = 28, T__15 = 29, T__14 = 30,
			T__13 = 31, T__12 = 32, T__11 = 33, T__10 = 34, T__9 = 35,
			T__8 = 36, T__7 = 37, T__6 = 38, T__5 = 39, T__4 = 40, T__3 = 41,
			T__2 = 42, T__1 = 43, T__0 = 44, ID = 45, DEC = 46, OCT = 47,
			HEX = 48, CHAR = 49, STR = 50, WS = 51, LINE_COMMENT = 52,
			COMMENT = 53, PREPROCESS = 54, Typedef = 55, Void = 56, Char = 57,
			Int = 58, Struct = 59, Union = 60, If = 61, Else = 62, While = 63,
			For = 64, Continue = 65, Break = 66, Return = 67, Sizeof = 68;
	public static final String[] tokenNames = { "<INVALID>", "'<<='", "']'",
			"'-='", "'&'", "','", "'['", "'*'", "'-'", "'('", "'&='", "'<'",
			"'--'", "'!='", "'<='", "'<<'", "'>>='", "'...'", "'{'", "'+='",
			"'^='", "'}'", "'++'", "'>>'", "'%'", "'->'", "'^'", "'*='", "')'",
			"'.'", "'+'", "'='", "';'", "'&&'", "'||'", "'>'", "'%='", "'|='",
			"'/='", "'=='", "'/'", "'~'", "'>='", "'|'", "'!'", "ID", "DEC",
			"OCT", "HEX", "CHAR", "STR", "WS", "LINE_COMMENT", "COMMENT",
			"PREPROCESS", "Typedef", "Void", "Char", "Int", "Struct", "Union",
			"If", "Else", "While", "For", "Continue", "Break", "Return",
			"Sizeof" };
	public static final int RULE_program = 0, RULE_declaration = 1,
			RULE_function_definition = 2, RULE_parameters = 3,
			RULE_declarators = 4, RULE_init_declarators = 5,
			RULE_init_declarator = 6, RULE_initializer = 7,
			RULE_type_specifier = 8, RULE_struct_or_union = 9,
			RULE_plain_declaration = 10, RULE_declarator = 11,
			RULE_plain_declarator = 12, RULE_statement = 13,
			RULE_expression_statement = 14, RULE_compound_statement = 15,
			RULE_selection_statement = 16, RULE_iteration_statement = 17,
			RULE_jump_statement = 18, RULE_expression = 19,
			RULE_assignment_expression = 20, RULE_assignment_operator = 21,
			RULE_constant_expression = 22, RULE_logical_or_expression = 23,
			RULE_logical_and_expression = 24,
			RULE_inclusive_or_expression = 25,
			RULE_exclusive_or_expression = 26, RULE_and_expression = 27,
			RULE_equality_expression = 28, RULE_equality_operator = 29,
			RULE_relational_expression = 30, RULE_relational_operator = 31,
			RULE_shift_expression = 32, RULE_shift_operator = 33,
			RULE_additive_expression = 34, RULE_additive_operator = 35,
			RULE_multiplicative_expression = 36,
			RULE_multiplicative_operator = 37, RULE_cast_expression = 38,
			RULE_type_name = 39, RULE_unary_expression = 40,
			RULE_unary_operator = 41, RULE_postfix_expression = 42,
			RULE_postfix = 43, RULE_arguments = 44,
			RULE_primary_expression = 45, RULE_constant = 46,
			RULE_typedef_name = 47, RULE_identifier = 48,
			RULE_integer_constant = 49, RULE_character_constant = 50,
			RULE_string = 51;
	public static final String[] ruleNames = { "program", "declaration",
			"function_definition", "parameters", "declarators",
			"init_declarators", "init_declarator", "initializer",
			"type_specifier", "struct_or_union", "plain_declaration",
			"declarator", "plain_declarator", "statement",
			"expression_statement", "compound_statement",
			"selection_statement", "iteration_statement", "jump_statement",
			"expression", "assignment_expression", "assignment_operator",
			"constant_expression", "logical_or_expression",
			"logical_and_expression", "inclusive_or_expression",
			"exclusive_or_expression", "and_expression", "equality_expression",
			"equality_operator", "relational_expression",
			"relational_operator", "shift_expression", "shift_operator",
			"additive_expression", "additive_operator",
			"multiplicative_expression", "multiplicative_operator",
			"cast_expression", "type_name", "unary_expression",
			"unary_operator", "postfix_expression", "postfix", "arguments",
			"primary_expression", "constant", "typedef_name", "identifier",
			"integer_constant", "character_constant", "string" };

	@Override
	public String getGrammarFileName() {
		return "tiger.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public tigerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA,
				_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}

		public Function_definitionContext function_definition(int i) {
			return getRuleContext(Function_definitionContext.class, i);
		}

		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class, i);
		}

		public List<Function_definitionContext> function_definition() {
			return getRuleContexts(Function_definitionContext.class);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_program;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterProgram(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitProgram(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor).visitProgram(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
						setState(106);
						switch (getInterpreter().adaptivePredict(_input, 0,
								_ctx)) {
						case 1: {
							setState(104);
							declaration();
						}
							break;

						case 2: {
							setState(105);
							function_definition();
						}
							break;
						}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID)
						| (1L << Typedef) | (1L << Void) | (1L << Char)
						| (1L << Int) | (1L << Struct) | (1L << Union))) != 0));
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Init_declaratorsContext init_declarators() {
			return getRuleContext(Init_declaratorsContext.class, 0);
		}

		public TerminalNode Typedef() {
			return getToken(tigerParser.Typedef, 0);
		}

		public DeclaratorsContext declarators() {
			return getRuleContext(DeclaratorsContext.class, 0);
		}

		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class, 0);
		}

		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_declaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterDeclaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitDeclaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitDeclaration(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			setState(121);
			switch (_input.LA(1)) {
			case Typedef:
				enterOuterAlt(_localctx, 1);
				{
					setState(110);
					match(Typedef);
					setState(111);
					type_specifier();
					setState(112);
					declarators();
					setState(113);
					match(32);
				}
				break;
			case ID:
			case Void:
			case Char:
			case Int:
			case Struct:
			case Union:
				enterOuterAlt(_localctx, 2);
				{
					setState(115);
					type_specifier();
					setState(117);
					_la = _input.LA(1);
					if (_la == 7 || _la == ID) {
						{
							setState(116);
							init_declarators();
						}
					}

					setState(119);
					match(32);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_definitionContext extends ParserRuleContext {
		public Plain_declaratorContext plain_declarator() {
			return getRuleContext(Plain_declaratorContext.class, 0);
		}

		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class, 0);
		}

		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class, 0);
		}

		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class, 0);
		}

		public Function_definitionContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_function_definition;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterFunction_definition(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitFunction_definition(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitFunction_definition(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Function_definitionContext function_definition()
			throws RecognitionException {
		Function_definitionContext _localctx = new Function_definitionContext(
				_ctx, getState());
		enterRule(_localctx, 4, RULE_function_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(123);
				type_specifier();
				setState(124);
				plain_declarator();
				setState(125);
				match(9);
				setState(127);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID)
						| (1L << Void) | (1L << Char) | (1L << Int)
						| (1L << Struct) | (1L << Union))) != 0)) {
					{
						setState(126);
						parameters();
					}
				}

				setState(129);
				match(28);
				setState(130);
				compound_statement();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public Plain_declarationContext plain_declaration(int i) {
			return getRuleContext(Plain_declarationContext.class, i);
		}

		public List<Plain_declarationContext> plain_declaration() {
			return getRuleContexts(Plain_declarationContext.class);
		}

		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_parameters;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterParameters(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitParameters(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitParameters(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameters);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(132);
				plain_declaration();
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				while (_alt != 2 && _alt != -1) {
					if (_alt == 1) {
						{
							{
								setState(133);
								match(5);
								setState(134);
								plain_declaration();
							}
						}
					}
					setState(139);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				}
				setState(142);
				_la = _input.LA(1);
				if (_la == 5) {
					{
						setState(140);
						match(5);
						setState(141);
						match(17);
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaratorsContext extends ParserRuleContext {
		public List<DeclaratorContext> declarator() {
			return getRuleContexts(DeclaratorContext.class);
		}

		public DeclaratorContext declarator(int i) {
			return getRuleContext(DeclaratorContext.class, i);
		}

		public DeclaratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_declarators;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterDeclarators(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitDeclarators(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitDeclarators(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DeclaratorsContext declarators() throws RecognitionException {
		DeclaratorsContext _localctx = new DeclaratorsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(144);
				declarator();
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 5) {
					{
						{
							setState(145);
							match(5);
							setState(146);
							declarator();
						}
					}
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_declaratorsContext extends ParserRuleContext {
		public List<Init_declaratorContext> init_declarator() {
			return getRuleContexts(Init_declaratorContext.class);
		}

		public Init_declaratorContext init_declarator(int i) {
			return getRuleContext(Init_declaratorContext.class, i);
		}

		public Init_declaratorsContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_init_declarators;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterInit_declarators(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitInit_declarators(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitInit_declarators(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Init_declaratorsContext init_declarators()
			throws RecognitionException {
		Init_declaratorsContext _localctx = new Init_declaratorsContext(_ctx,
				getState());
		enterRule(_localctx, 10, RULE_init_declarators);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(152);
				init_declarator();
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == 5) {
					{
						{
							setState(153);
							match(5);
							setState(154);
							init_declarator();
						}
					}
					setState(159);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_declaratorContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class, 0);
		}

		public InitializerContext initializer() {
			return getRuleContext(InitializerContext.class, 0);
		}

		public Init_declaratorContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_init_declarator;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterInit_declarator(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitInit_declarator(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitInit_declarator(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Init_declaratorContext init_declarator()
			throws RecognitionException {
		Init_declaratorContext _localctx = new Init_declaratorContext(_ctx,
				getState());
		enterRule(_localctx, 12, RULE_init_declarator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(160);
				declarator();
				setState(163);
				_la = _input.LA(1);
				if (_la == 31) {
					{
						setState(161);
						match(31);
						setState(162);
						initializer();
					}
				}

			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitializerContext extends ParserRuleContext {
		public InitializerContext initializer(int i) {
			return getRuleContext(InitializerContext.class, i);
		}

		public Assignment_expressionContext assignment_expression() {
			return getRuleContext(Assignment_expressionContext.class, 0);
		}

		public List<InitializerContext> initializer() {
			return getRuleContexts(InitializerContext.class);
		}

		public InitializerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_initializer;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterInitializer(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitInitializer(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitInitializer(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final InitializerContext initializer() throws RecognitionException {
		InitializerContext _localctx = new InitializerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_initializer);
		int _la;
		try {
			setState(177);
			switch (_input.LA(1)) {
			case 4:
			case 7:
			case 8:
			case 9:
			case 12:
			case 22:
			case 30:
			case 41:
			case 44:
			case ID:
			case DEC:
			case OCT:
			case HEX:
			case CHAR:
			case STR:
			case Sizeof:
				enterOuterAlt(_localctx, 1);
				{
					setState(165);
					assignment_expression();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 2);
				{
					setState(166);
					match(18);
					setState(167);
					initializer();
					setState(172);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == 5) {
						{
							{
								setState(168);
								match(5);
								setState(169);
								initializer();
							}
						}
						setState(174);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(175);
					match(21);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_specifierContext extends ParserRuleContext {
		public DeclaratorsContext declarators(int i) {
			return getRuleContext(DeclaratorsContext.class, i);
		}

		public Typedef_nameContext typedef_name() {
			return getRuleContext(Typedef_nameContext.class, 0);
		}

		public List<DeclaratorsContext> declarators() {
			return getRuleContexts(DeclaratorsContext.class);
		}

		public TerminalNode Void() {
			return getToken(tigerParser.Void, 0);
		}

		public Type_specifierContext type_specifier(int i) {
			return getRuleContext(Type_specifierContext.class, i);
		}

		public TerminalNode Char() {
			return getToken(tigerParser.Char, 0);
		}

		public List<Type_specifierContext> type_specifier() {
			return getRuleContexts(Type_specifierContext.class);
		}

		public TerminalNode Int() {
			return getToken(tigerParser.Int, 0);
		}

		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class, 0);
		}

		public Struct_or_unionContext struct_or_union() {
			return getRuleContext(Struct_or_unionContext.class, 0);
		}

		public Type_specifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_type_specifier;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterType_specifier(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitType_specifier(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitType_specifier(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Type_specifierContext type_specifier()
			throws RecognitionException {
		Type_specifierContext _localctx = new Type_specifierContext(_ctx,
				getState());
		enterRule(_localctx, 16, RULE_type_specifier);
		int _la;
		try {
			setState(201);
			switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
					setState(179);
					match(Void);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
					setState(180);
					match(Char);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
					setState(181);
					match(Int);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
					setState(182);
					typedef_name();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
					setState(183);
					struct_or_union();
					setState(185);
					_la = _input.LA(1);
					if (_la == ID) {
						{
							setState(184);
							identifier();
						}
					}

					setState(187);
					match(18);
					setState(192);
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
							{
								setState(188);
								type_specifier();
								setState(189);
								declarators();
								setState(190);
								match(32);
							}
						}
						setState(194);
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ID)
							| (1L << Void)
							| (1L << Char)
							| (1L << Int)
							| (1L << Struct) | (1L << Union))) != 0));
					setState(196);
					match(21);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
					setState(198);
					struct_or_union();
					setState(199);
					identifier();
				}
				break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_or_unionContext extends ParserRuleContext {
		public TerminalNode Union() {
			return getToken(tigerParser.Union, 0);
		}

		public TerminalNode Struct() {
			return getToken(tigerParser.Struct, 0);
		}

		public Struct_or_unionContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_struct_or_union;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterStruct_or_union(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitStruct_or_union(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof tigerVisitor)
				return ((tigerVisitor<? extends T>) visitor)
						.visitStruct_or_union(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final Struct_or_unionContext struct_or_union()
			throws RecognitionException {
		Struct_or_unionContext _localctx = new Struct_or_unionContext(_ctx,
				getState());
		enterRule(_localctx, 18, RULE_struct_or_union);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(203);
				_la = _input.LA(1);
				if (!(_la == Struct || _la == Union)) {
					_errHandler.recoverInline(this);
				}
				consume();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Plain_declarationContext extends ParserRuleContext {
		public DeclaratorContext declarator() {
			return getRuleContext(DeclaratorContext.class, 0);
		}

		public Type_specifierContext type_specifier() {
			return getRuleContext(Type_specifierContext.class, 0);
		}

		public Plain_declarationContext(ParserRuleContext parent,
				int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_plain_declaration;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).enterPlain_declaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof tigerListener)
				((tigerListener) listener).exitPlain_declaration(this);
		}
